docker_images/databases/redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  labels:
    app: redis
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    # Allow traffic only from pods in the SAME namespace
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 6379
